[metadata]
name = jiveplot
version = 2.0.1
description = Python based visualization tool for AIPS++/CASA MeasurementSet version 2 data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haavee/jiveplot
author = Marjolein Verkouter
author_email = verkouter@jive.eu
license = GPL-3.0
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
keywords = astronomy, astrophysics, VLBI

[options]
packages = jiveplot, jiveplot.postprocessing
install_requires =
    numpy
    python-casacore
    ppgplot
    six
python_requires = >=2.7
scripts =
    bin/jplotter
    bin/standardplots
    bin/klk1
